[tool.poetry]
name = "planetmint-cryptoconditions"
version = "1.1.0"
description = "Multi-algorithm, multi-level, multi-signature format for expressing conditions and fulfillments according to the Interledger Protocol (ILP)."
authors = ["Cryptoconditions contributors <contact@ipdb.global>"]
readme = "README.rst"
keywords = ["cryptoconditions", "interledger", "merkle tree", "ed25519", "threshold signatures", "hash lock", "zenroom"]
repository = "https://github.com/planetmint/cryptoconditions/"
license = "MIT"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]
exclude = ["tests*", "examples"]

[tool.poetry.dependencies]
python = "^3.9"
zenroom = "^2.3.1"
base58 = "2.1.1"
PyNaCl = "1.4.0"
pyasn1 = "0.4.8"
cryptography = "3.4.7"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"
ipython = "^8.5.0"
coverage = "^6.4.4"
hypothesis = "^6.54.5"
pep8 = "^1.7.1"
pyflakes = "^2.5.0"
pylint = "^2.15.2"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
recommonmark = ">=0.4.0"
Sphinx = ">=1.3.5"
sphinxcontrib-napoleon = ">=0.4.4"
sphinx-press-theme = "0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
